--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "homepage": "https://github.com/safezero/secp256k1-amorph-utils#readme",
   "dependencies": {
     "amorph": "^1.1.0",
-    "amorph-buffer": "^1.1.1",
+    "amorph-bn": "0.0.1",
+    "amorph-buffer": "^1.1.2",
     "arguguard": "0.0.5",
+    "elliptic": "^6.4.0",
+    "random-amorph": "0.0.1",
     "secp256k1": "^3.2.5"
   },
   "devDependencies": {
