--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "amorph": "^1.1.0",
     "amorph-bn": "0.0.1",
     "amorph-buffer": "^1.1.2",
-    "arguguard": "0.0.5",
+    "arguguard": "^2.1.1",
     "elliptic": "^6.4.0",
     "random-amorph": "0.0.1",
     "secp256k1": "^3.2.5"
