--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
   },
   "homepage": "https://github.com/safezero/secp256k1-amorph-utils#readme",
   "dependencies": {
-    "amorph": "^1.1.0",
-    "amorph-bn": "0.0.1",
-    "amorph-buffer": "^1.1.2",
     "arguguard": "^2.1.1",
     "elliptic": "^6.4.0",
     "random-amorph": "0.0.1",
     "secp256k1": "^3.2.5"
   },
   "devDependencies": {
+    "amorph": "^1.1.0",
+    "amorph-bn": "0.0.1",
+    "amorph-buffer": "^1.1.2",
     "chai": "^3.5.0",
     "chai-amorph": "0.0.2",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "time-require": "^0.1.2"
   }
 }
